-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 12, 13, 14
-
Component/s: hotspot
-
b05
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8245101 | 13.0.4 | Thomas Stuefe | P4 | Resolved | Fixed | b01 |
| JDK-8231459 | 11.0.6-oracle | Thomas Stuefe | P4 | Resolved | Fixed | b01 |
| JDK-8231396 | 11.0.6 | Thomas Stuefe | P4 | Resolved | Fixed | b01 |
When calling MetaspaceUtils::print_report() (both variants) they will crash if Metaspace was not yet initialized.
- backported by
-
JDK-8231396 MetaspaceUtils::print_report crashes when called before initialization
-
- Resolved
-
-
JDK-8231459 MetaspaceUtils::print_report crashes when called before initialization
-
- Resolved
-
-
JDK-8245101 MetaspaceUtils::print_report crashes when called before initialization
-
- Resolved
-