8227032: MetaspaceUtils::print_report crashes when called before initialization

Reviewed-by: tschatzl, goetz